--- a/src/WASM/Pages/Admin/Image/Index.razor
+++ b/src/WASM/Pages/Admin/Image/Index.razor
@@ -9,14 +9,11 @@
 
 <MudGrid>
     <MudItem md="3" sm="6" xs="12" Class="d-flex justify-center">
-        <MudImage Elevation="5" Fluid="true" ObjectFit="ObjectFit.Cover" Src="@imageDataUrl" Style="height:100%" />
+        <MudImage Elevation="5" Fluid="true" ObjectFit="ObjectFit.Cover" Src="@imageDataUrl" />
     </MudItem>
     <MudItem md="9" sm="6" xs="12">
         <MudPaper Elevation="5" Class="my-3">
             <MudGrid>
-                <MudItem xs="12">
-                    <MudText Typo="Typo.h5" Class="ml-5"><span class="mud-primary-text"><strong>Upload New Image</strong></span></MudText>
-                </MudItem>
                 <MudItem xs="12">
                     <EditForm Class="mx-5" Model="Image" OnValidSubmit="HandleSubmit">
                         <DataAnnotationsValidator />
@@ -117,7 +114,7 @@
 
             // Fills the content of the image byte array
             await imageUpload.OpenReadStream(31000000).ReadAsync(fileAsByte);
-            string byteString = Convert.ToBase64String(fileAsByte);
+            var byteString = Convert.ToBase64String(fileAsByte);
 
             Image.NewImageExtension = imageUpload.Name.Substring(imageUpload.Name.Length - 4);
             Image.NewImageBase64Content = byteString;
