--- a/src/WASM/_Imports.razor
+++ b/src/WASM/_Imports.razor
@@ -8,7 +8,8 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using MudBlazor
-@using Blazored.TextEditor
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.RichTextEditor
 @using WASM
 @using WASM.Components.Public
 @using WASM.Components.Admin
