--- a/src/WASM/Pages/Admin/Profile.razor
+++ b/src/WASM/Pages/Admin/Profile.razor
@@ -77,7 +77,7 @@
                                 </MudTextField>
                             </MudItem>
                             <MudItem xs="12">
-                                <MudTextField Class="mt-n5 mb-5" @bind-Value="@User.Intro" For="@(() => User.Intro)" Variant="Variant.Outlined" Label="Intro" ReadOnly="@readOnly"
+                                <MudTextField Class="mt-n5 mb-5" @bind-Value="@User.Intro" For="@(() => User.Intro)" Variant="Variant.Outlined" Label="Intro" ReadOnly="@readOnly" Lines="5"
                                               Adornment="Adornment.End" AdornmentIcon="@Icons.Filled.Biotech" AdornmentColor="Color.Dark">
                                 </MudTextField>
                             </MudItem>
