--- a/src/WASM/Pages/Admin/Service/Index.razor
+++ b/src/WASM/Pages/Admin/Service/Index.razor
@@ -72,8 +72,8 @@
             if (deleteResult)
             {
                 Snackbar.Add("Delete Success", Severity.Success);
+                Services = await ServiceRepo.GetAllAsync(ApiEndPoints.ServiceEndpoint);
                 StateHasChanged();
-                NavManager.NavigateTo("/admin/services", true);
             }
             else
                 Snackbar.Add("Delete Error", Severity.Error);
