--- a/src/WASM/Shared/AppBar.razor
+++ b/src/WASM/Shared/AppBar.razor
@@ -2,7 +2,8 @@
 
 <MudAppBar>
     <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
-    &nbsp; Huy NG
+    &nbsp;
+    <MudLink Href="/" Underline="Underline.None"><MudText Typo="Typo.h6" Class="text-white">Huy NG</MudText></MudLink>
     <MudSpacer />
     <MudIconButton Icon="@Icons.Custom.Brands.LinkedIn" Color="Color.Inherit" />
     <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" />
